--- a/vcastplay-cms/src/app/features/auth/login/login.component.html
+++ b/vcastplay-cms/src/app/features/auth/login/login.component.html
@@ -16,7 +16,7 @@
     </ng-container>
     <div class="col-span-5 text-white" [ngClass]="{ 'lg:col-span-2': tokenValue() }" (keydown.enter)="auth.onLogin()">
         <div class="relative flex flex-col items-center justify-center h-full p-3 md:p-10 bg-[var(--p-primary-500)]">
-            <div class="flex flex-col gap-4 px-4 lg:px-0 w-full" [ngClass]="{ 'md:w-1/2 lg:w-1/4': !tokenValue(), 'sm:w-1/2 lg:w-full': tokenValue() }">
+            <div class="flex flex-col gap-4 px-4 lg:px-0 w-full" [ngClass]="{ 'md:w-1/2 xl:w-1/4': !tokenValue(), 'sm:w-1/2 lg:w-full': tokenValue() }">
                 <div class="flex flex-col gap-10 items-center justify-center">
                     <img src="assets/vcastplay-icon-transparent.png" alt="app logo" width="100">
                     <p class="text-2xl font-bold">
@@ -27,11 +27,11 @@
                 <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="auth.loginForm">
                     <p-floatlabel variant="in">
                         <input id="username" pInputText formControlName="username" [fluid]="true" />
-                        <label for="username">Username*</label>
+                        <label for="username">Username</label>
                     </p-floatlabel>
                     <p-floatlabel variant="in">
                         <p-password formControlName="password" inputId="password" [toggleMask]="true" [fluid]="true" [feedback]="false" />
-                        <label for="password">Password*</label>
+                        <label for="password">Password</label>
                     </p-floatlabel>
                     <div class="flex justify-between items-center">
                         <div class="flex items-center">
