--- a/vcastplay-cms/src/app/features/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/features/design-layout/design-layout-details/design-layout-details.component.html
@@ -129,7 +129,7 @@
     </div>
     } @if (showContents()) {
     <div class="absolute top-0 right-0 h-full z-50">
-      <p-card styleClass="h-full">
+      <p-card styleClass="h-full !rounded-l-lg !rounded-r-none">
         <ng-template #title>
           <div class="flex gap-2">
             <p class="text-xl font-semibold">Choose Content</p>
