--- a/vcastplay-cms/src/app/features/schedules/schedule-details/schedule-details.component.html
+++ b/vcastplay-cms/src/app/features/schedules/schedule-details/schedule-details.component.html
@@ -69,7 +69,7 @@
             <full-calendar #scheduleCalendar [options]="calendarOptions"></full-calendar>
         </div>
         <ng-template #footer>
-            <div class="hidden md:grid w-full grid-cols-2 md:grid-cols-4 lg:grid-cols-7 gap-3">
+            <!-- <div class="hidden md:grid w-full grid-cols-2 md:grid-cols-4 lg:grid-cols-7 gap-3">
                 <ng-container *ngTemplateOutlet="totalInfo; context: { $implicit: totalByType() }"></ng-container>
             </div>
             <p-button class="md:hidden" label="Info" icon="pi pi-info-circle" (onClick)="infoPop.show($event)" size="small" />
@@ -77,19 +77,50 @@
                 <div class="grid gap-2">
                     <ng-container *ngTemplateOutlet="totalInfo; context: { $implicit: totalByType() }"></ng-container>
                 </div>
-            </p-popover>
+            </p-popover> -->
+            <div class="py-2 md:flex grid grid-cols-2 sm:grid-cols-5 gap-6">
+                <ng-container *ngTemplateOutlet="totalInfo; context: { $implicit: totalByType() }"></ng-container>
+            </div>
         </ng-template>
     </p-card>
 </div>
 
 <ng-template #totalInfo let-total>
-    <p-tag value="Image ({{ total.image ?? 0 }})" icon="pi pi-image" />
+    <!-- <p-tag value="Image ({{ total.image ?? 0 }})" icon="pi pi-image" />
     <p-tag value="Video ({{ total.video ?? 0 }})" icon="pi pi-video" severity="contrast" />
     <p-tag value="Audio ({{ total.audio ?? 0 }})" icon="pi pi-volume-up" severity="success" />
     <p-tag value="File ({{ total.file ?? 0 }})" icon="pi pi-file" severity="warn" />
     <p-tag value="Web ({{ total.web ?? 0 }})" icon="pi pi-globe" severity="secondary" />
     <p-tag value="Youtube ({{ total.youtube ?? 0 }})" icon="pi pi-youtube" severity="danger" />
-    <p-tag value="Facebook ({{ total.facebook ?? 0 }})" icon="pi pi-facebook" severity="info" />
+    <p-tag value="Facebook ({{ total.facebook ?? 0 }})" icon="pi pi-facebook" severity="info" /> -->
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">Image:</p>
+        <p-badge [value]="total.image ?? 0" />
+    </div>
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">Video:</p>
+        <p-badge severity="contrast" [value]="total.video ?? 0" />
+    </div>
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">Audio:</p>
+        <p-badge severity="success" [value]="total.audio ?? 0" />
+    </div>
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">File:</p>
+        <p-badge severity="warn" [value]="total.file ?? 0" />
+    </div>
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">Web:</p>
+        <p-badge severity="secondary" [value]="total.web ?? 0" />
+    </div>
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">Youtube:</p>
+        <p-badge severity="danger" [value]="total.youtube ?? 0" />
+    </div>
+    <div class="flex gap-1 items-center md:justify-center">
+        <p class="text-sm font-semibold">Facebook:</p>
+        <p-badge severity="info" [value]="total.facebook ?? 0" />
+    </div>
 </ng-template>
 
 <app-schedules-content-list #scheduleContents [calendar]="scheduleCalendar" 
