--- a/vcastplay-cms/src/app/components/drawer/drawer.component.html
+++ b/vcastplay-cms/src/app/components/drawer/drawer.component.html
@@ -1,6 +1,6 @@
 <div class="fixed drawer-container hidden md:block w-[7rem] h-full bg-gray-800 z-50">
     <div class="relative flex flex-col gap-3 mt-6 h-full">
-        @for (menu of menuItems; track $index) {
+        @for (menu of modules; track $index) {
             <li (click)="onToggleMenu(menu, $event)" class="relative list-none">
                 <div class="hover:bg-[var(--p-primary-600)] flex flex-col items-center justify-center cursor-pointer text-center p-2" 
                     [ngClass]="{ 'bg-[var(--p-primary-600)] border-l-4 border-[var(--p-surface-500)]': menu.routerLink === router.url }">
@@ -25,7 +25,7 @@
 <p-drawer [(visible)]="utils.drawerVisible" styleClass="!h-auto max-h-100" position="bottom">
     <ng-template #header>Side Menus</ng-template>
     <ul class="flex flex-col gap-2 text-sm">
-        @for (menu of menuItems; track $index) {
+        @for (menu of modules; track $index) {
             <li 
                 (click)="onToggleMenu(menu, $event)"
                 class="relative px-3 py-2 list-none hover:bg-[var(--p-primary-600)] hover:text-white flex flex-row justify-between items-center w-full hover:rounded-md cursor-pointer"
