--- a/vcastplay-cms/src/app/features/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/features/assets/asset-list-item/asset-list-item.component.html
@@ -1,5 +1,4 @@
 <div class="relative flex flex-col gap-2 border-1 border-[var(--p-primary-100)] shadow shadow-xl h-40 w-full group">
-    
     <div class="flex-1 flex flex-col items-center justify-center gap-2 relative group rounded-lg">
         @switch (asset.type) {
             @case ('facebook') {
@@ -10,36 +9,41 @@
             }
             @default {
                 <app-asset-preview class="absolute h-full w-full flex items-center justify-center bg-stone-800"
-                    [asset]="asset" [showControls]="true" />
+                    [asset]="asset" [showControls]="false" />
             }
         }
 
-        @if(showDetails) {
+        @if (showDetails) {
             <div class="flex items-end absolute bottom-0 left-0 h-full w-full bg-gradient-to-t from-[var(--p-primary-500)] to-transparent p-2 text-white"  
                 (click)="showOptions && showDrawer.set(true)" [ngClass]="{ 'cursor-pointer': showOptions }">
                 <div class="flex flex-col w-full">
-                    <p class="text-sm line-clamp-1">{{ asset.name }}</p>
+                    <p class="text-sm line-clamp-1 truncate">{{ asset.name }}</p>
                     @if(!['facebook', 'youtube'].includes(asset.type)) {
                         <p class="text-xs">{{ utils.formatSize(asset.fileDetails.size ?? 0) }}</p>
                     }
-
                 </div>
             </div>
         }
     </div>
 </div>
 
-
-<p-drawer header="Options" [(visible)]="showDrawer" position="bottom" [style]="{height: 'auto'}" appendTo="body">
+<p-drawer header="Options" [(visible)]="showDrawer" position="bottom" [style]="{ height: 'auto'}" appendTo="body">
     <div class="flex gap-4">
-        <div class="flex flex-col w-full">
-            <p class="text-lg font-semibold line-clamp-1">{{ asset.name }}</p>
-            @if(!['facebook', 'youtube'].includes(asset.type)) {
-                <p class="text-xs">{{ utils.formatSize(asset.fileDetails.size ?? 0) }}</p>
-            }
-        </div>
-        <div class="flex gap-2 ml-auto">
-            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: asset }"></ng-container>
-        </div>
+        <ng-container *ngIf="asset">
+            <div class="flex flex-col w-full gap-4">
+                <div class="h-100 w-full relative">
+                    <app-asset-preview class="absolute h-full w-full flex items-center justify-center bg-stone-800"
+                        [asset]="asset" [showControls]="true" />
+                </div>
+                <p class="text-lg font-semibold line-clamp-1">{{ asset.name }}</p>
+                @if(!['facebook', 'youtube'].includes(asset.type)) {
+                    <p class="text-xs">{{ utils.formatSize(asset.fileDetails.size ?? 0) }}</p>
+                }
+                <p class="!text-sm italic"><span><li class="pi pi-clock"></li></span> {{ utils.onGetLastUpdatedLabel(asset.updatedOn) }}</p>
+                <div class="flex gap-2 ml-auto">
+                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: asset }"></ng-container>
+                </div>
+            </div>
+        </ng-container>
     </div>
 </p-drawer>
