--- a/vcastplay-cms/src/app/features/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/features/dashboard/dashboard.component.html
@@ -1,23 +1,5 @@
 <div class="flex flex-col gap-5 h-full">
-    <div class="flex justify-between items-center">
-        <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-        <p-button 
-            class="hidden md:block" 
-            severity="primary" 
-            label="Upgrade Subscription" 
-            pTooltip="Purchase More Licenses"
-            tooltipPosition="bottom" 
-            icon="pi pi-angle-double-up"
-            size="small" />
-        <p-button 
-            class="md:hidden" 
-            label="Upgrade" 
-            severity="primary" 
-            pTooltip="Purchase More Licenses" 
-            tooltipPosition="bottom" 
-            icon="pi pi-angle-double-up"
-            size="small" />
-    </div>
+    <app-breadcrumbs [menu]="pageInfo" />
     <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
         <p-card styleClass="h-full">
             <ng-template #title>
