--- a/vcastplay-cms/src/app/main/main.component.html
+++ b/vcastplay-cms/src/app/main/main.component.html
@@ -1,11 +1,27 @@
 <div class="min-h-screen md:ms-[7rem] relative">
-  <app-toolbar></app-toolbar>
-  <app-drawer></app-drawer>
+  <app-toolbar />
+  <app-drawer [modules]="menuItems" />
   <div class="main-wrapper relative">
-    <div
-      class="main-content p-3 md:p-[1rem] bg-gray-200 dark:bg-black relative md:rounded-tl-[26px]"
-    >
-      <router-outlet></router-outlet>
+    <div class="main-content p-3 md:p-[1rem] bg-gray-200 dark:bg-black relative md:rounded-tl-[26px]">
+      <div class="py-2">
+        <p-card styleClass="!relative !bg-linear-to-r !from-[#213448] !via-[#4F6B80] !to-[#00B4D8] !text-white">
+          <img class="absolute bottom-0 left-0 w-full h-full opacity-50 object-cover" src="assets/wave.svg" alt="upgrade wave background">
+          <ng-template #title>
+            <div class="flex gap-3 items-center">
+              <li class="pi pi-crown !text-3xl !text-amber-500"></li>
+              <p class="font-semibold">Upgrade to Pro</p>
+            </div>
+          </ng-template>
+          <ng-template #subtitle>Take full control of your displays</ng-template>
+          <p>Unlock advanced scheduling, analytics, and remote management tools to maximize your OOH campaigns’ performance.</p>
+          <ng-template #footer>
+            <div class="flex justify-end">
+              <p-button label="Upgrade to Pro" icon="pi pi-arrow-right" iconPos="right" size="small" />
+            </div>
+          </ng-template>
+        </p-card>
+      </div>
+      <router-outlet />
     </div>
   </div>
 
