--- a/vcastplay-cms/src/app/features/assets/asset-filter/asset-filter.component.html
+++ b/vcastplay-cms/src/app/features/assets/asset-filter/asset-filter.component.html
@@ -12,7 +12,7 @@
             </p-overlaybadge>
         </ng-template>
     </p-button>
-    <p-popover title="Filter" [appendTo]="'body'" #filter>
+    <p-popover title="Filter" appendTo="body" #filter>
         <div class="flex flex-col gap-4 w-[18rem]">
             <p class="font-medium text-surface-500 dark:text-surface-0 block">Filter:</p>
             <div class="grid grid-cols-2 md:grid-cols-1 gap-2 w[25rem]">
