--- a/vcastplay-cms/src/app/features/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/features/design-layout/design-layout-details/design-layout-details.component.html
@@ -128,7 +128,7 @@
       <p class="text-2xl italic text-gray-400">Create a new design (Alt + Ctrl + N)</p>
     </div>
     } @if (showContents()) {
-    <div class="absolute top-0 right-0 h-full z-50">
+    <div class="absolute top-0 right-0 h-full w-120 z-50">
       <p-card styleClass="h-full !rounded-l-lg !rounded-r-none">
         <ng-template #title>
           <div class="flex gap-2">
