--- a/vcastplay-cms/src/app/features/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/features/playlist/playlist-details/playlist-details.component.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- Preview Contents -->
-        <app-playlist-player class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg" 
+        <app-playlist-player class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white" 
           [playlist]="playlistForm.value" (onCurrentItemChange)="onCurrentItemChange($event)" (isPlayingChange)="isPlaying.set($event)" />
       </div>
 
@@ -89,12 +89,12 @@
     <ng-template #footer>
       <div class="grid grid-cols-1 md:grid-cols-3 md:flex w-full items-center gap-2 md:py-2 py-4">
         <div class="flex items-center gap-2">
-          <p-checkbox formControlName="loop" inputId="loop" binary />
+          <p-checkbox formControlName="loop" inputId="loop" [readonly]="isPlaying()" binary />
           <label for="loop" class="text-sm">Loop</label>
         </div>
         <div class="flex gap-4" formGroupName="transition">
           <div class="flex items-center gap-2">
-            <p-checkbox formControlName="hasGap" inputId="hasGap" binary />
+            <p-checkbox formControlName="hasGap" inputId="hasGap" [readonly]="isPlaying()" binary />
             <label for="hasGap" class="text-sm">Black Gap</label>
           </div>
           <div class="flex items-center gap-2">
@@ -105,7 +105,8 @@
               optionLabel="label"
               optionValue="value"
               [options]="transitionTypes"
-              showClear
+              [readonly]="isPlaying()"
+              [showClear]="!isPlaying()"
             />
           </div>
           <div class="flex items-center gap-2">
@@ -118,7 +119,8 @@
               placeholder="Speed"
               [useGrouping]="false"
               [inputStyle]="{ width: '4rem' }"
-              showButtons
+              [readonly]="isPlaying()"
+              [showButtons]="!isPlaying()"
             />
             <span>sec.</span>
           </div>
